--- a/1.html
+++ b/1.html
@@ -2,27 +2,29 @@
 
 <html>
 <head>
-    <title>나에게 맞는 러닝화 찾기</title>
+    <title>건신정</title>
     <meta charset="utf-8">
 </head>
 
 <body>
-    <h1><a href="index.html">러닝화</a></h1>
+    <h1><a href="index.html">건강한 신체 그리고 건강한 정신</a></h1>
     <ol>
-        <li><a href="1.html">나이키</a></li>
-        <li><a href="2.html">아식스</a></li>
-        <li><a href="3.html">언더아머</a></li>
+        <li><a href="1.html">신체</a></li>
+        <li><a href="2.html">정신</a></li>
+        <li><a href="3.html">영양</a></li>
     </ol>
 
-    <h2>나이키</h2>
-    <strong>내게 맞는 <u>러닝화</u> 정보 </strong> 
+    <h2>소개</h2>
+    <strong>운동</strong> 
 
     <p>
     <img src="run.jpg" width="300">
     </p>
 
     <p style="margin-top:40px;">
-        Just Do It
+        개요<br><br>
+        운동(運動, exercise)은 체력과 수행력, 건강 등을 개선하거나 유지할 목적으로 
+        여가에 계획적, 구조적, 반복적으로 하는 신체 활동이다.
     </p>
 </body>
 </html>
