--- a/3.html
+++ b/3.html
@@ -2,27 +2,31 @@
 
 <html>
 <head>
-    <title>나에게 맞는 러닝화 찾기</title>
+    <title>건신정</title>
     <meta charset="utf-8">
 </head>
 
 <body>
-    <h1><a href="index.html">러닝화</a></h1>
+    <h1><a href="index.html">건강한 신체 그리고 건강한 정신</a></h1>
     <ol>
-        <li><a href="1.html">나이키</a></li>
-        <li><a href="2.html">아식스</a></li>
-        <li><a href="3.html">언더아머</a></li>
+        <li><a href="1.html">신체</a></li>
+        <li><a href="2.html">정신</a></li>
+        <li><a href="3.html">영양</a></li>
     </ol>
 
-    <h2>언더아머</h2>
-    <strong>내게 맞는 <u>러닝화</u> 정보 </strong> 
+    <h2>소개</h2>
+    <strong>영양</strong> 
 
     <p>
     <img src="run.jpg" width="300">
     </p>
 
     <p style="margin-top:40px;">
-        Under Armour Makes You Better
+        개요<br><br>
+        영양학(營養學, 영어: nutrition)은 목숨을 지탱하는 데 반드시 있어야 할 물질들(음식의 형태)인 
+        영양에 대하여 연구하는 학문으로, 식품이 생물에 어떻게 영향을 미치고 이용되는지를 연구한다. 
+        이를테면 식품의 종류, 조성, 조리법, 또 병이 났을 때의 식사 따위를 생리학, 생화학, 병리학, 
+        위생학의 입장에서 연구할 수 있다.
     </p>
 </body>
 </html>
