--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 
 <html>
 <head>
-    <title>나에게 맞는 러닝화 찾기</title>
+    <title>건신정</title>
     <meta charset="utf-8">
 </head>
 
 <body>
-    <h1><a href="index.html">러닝화</a></h1>
+    <h1><a href="index.html">건강한 신체 그리고 건강한 정신</a></h1>
     <ol>
-        <li><a href="1.html">나이키</a></li>
-        <li><a href="2.html">아식스</a></li>
-        <li><a href="3.html">언더아머</a></li>
+        <li><a href="1.html">신체</a></li>
+        <li><a href="2.html">정신</a></li>
+        <li><a href="3.html">영양</a></li>
     </ol>
 
     <h2>소개</h2>
-    <strong>내게 맞는 <u>러닝화</u> 정보 </strong> 
+    <strong>내게 맞는 <u>건강</u> 정보 </strong> 
 
     <p>
     <img src="run.jpg" width="300">
@@ -23,10 +23,12 @@
 
     <p style="margin-top:40px;">
         개요<br><br>
-        달리기를 위하여 만들어진 기능성 신발 종류. 
-        가벼운 조깅 수준에서부터 생활 <a href="https://ko.wikipedia.org/wiki/%EB%A7%88%EB%9D%BC%ED%86%A4"
-        target="_blank" title="마라톤 정보">마라톤</a> 수준까지 사용되며, 
-        발 형태를 지탱해 주고 발을 디딜때의 충격을 완화하는 기능이 있다.
+        <a href="https://ko.wikipedia.org/wiki/%EC%9B%B0%EB%8B%88%EC%8A%A4" target="_blank">웰니스(Wellness)</a>
+        는 세계보건기구(WHO)가 국제적으로 제시한 '건강'에 대한 정의를 
+        보다 심화시켜 광범위한 관점에서 접근한 새로운 건강관을 의미한다. 
+        1961년 미국 의학자 헐버트 던 (Halbert L. Dunn) 박사가 처음 웰니스라는 개념을 제창했다. 
+        보다 쉬운 말로 정의하면, 웰니스는 생활과학으로서 운동을 일상생활에 적절하게 도입해 
+        건강하게 하루하루의 삶을 보낸다는 의미에서 만들어진 개념이다.
     </p>
 </body>
 </html>
